feat: +header; +main, +card-template

--- a/index.html
+++ b/index.html
@@ -3,17 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&display=swap" rel="stylesheet">
+
     <title>Photo Blog</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>estate '24</h1>
     </header>
 
     <main>
         <div class="container">
-            
+            <div class="card">
+                <div class="pin">
+                    <img src="img/pin.svg" alt="">
+                </div>
+                <img src="img/luna.JPG" alt="">
+                <p>🌙 Luna</p>
+            </div>
+
+
+
         </div>
     </main>
 
