--- a/index.html
+++ b/index.html
@@ -18,20 +18,18 @@
     </header>
 
     <main>
-        <div class="container">
-            <div class="card">
+        <div id="board" class="container">
+            <!-- <div class="card">
                 <div class="pin">
                     <img src="img/pin.svg" alt="">
                 </div>
                 <img src="img/luna.JPG" alt="">
                 <p>🌙 Luna</p>
-            </div>
-
-
-
+            </div> -->
         </div>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script/script.js"></script>
 </body>
 </html>
