--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
 
     <main>
         <div id="board" class="container">
-            <!-- <div class="card">
-                <div class="pin">
-                    <img src="img/pin.svg" alt="">
-                </div>
-                <img src="img/luna.JPG" alt="">
-                <p>🌙 Luna</p>
-            </div> -->
+        </div>
+        <div class="overlay hidden">
+            <button>Chiudi</button>
+            <img src="img/cork.png" alt="">
         </div>
     </main>
 
