feat: overlay, +functionality

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <main>
         <div id="board" class="container">
         </div>
-        <div class="overlay hidden">
-            <button>Chiudi</button>
-            <img src="img/cork.png" alt="">
+        <div id="overlay" class="overlay hidden">
+            <button id="btn">Chiudi</button>
+            <img src="" alt="loading...">
         </div>
     </main>
 
