feat: overlay, closing without button; minor changes; cleaning code

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
     <main>
         <div id="board" class="container">
+            <!-- qui vengono create le cards -->
         </div>
-        <div id="overlay" class="overlay hidden">
+        <div id="overlay" class=" hidden">
             <button id="btn">Chiudi</button>
             <img src="" alt="loading...">
+            <p>titolo</p>
         </div>
     </main>
 
